# tenjin

./: .env  .gitignore  .pytest.toml  .ruff.toml  README.md  pytest.ini
.github/containerfiles/: fedora-42
.github/workflows/: nrsr.yaml  rebuildcontainer.yml
c2rust/: .gitrepo
c2rust/c2rust/: Cargo.toml
c2rust/c2rust-ast-builder/src/: builder.rs
c2rust/c2rust-ast-exporter/: build.rs
c2rust/c2rust-ast-exporter/src/: AstExporter.cpp  CMakeLists.txt  lib.rs
c2rust/c2rust-ast-exporter/src/tinycbor/: .gitrepo  CMakeLists.txt
c2rust/c2rust-refactor/src/ast_manip/: load_modules.rs
c2rust/c2rust-transpile/: Cargo.toml
c2rust/c2rust-transpile/src/: convert_type.rs  lib.rs
c2rust/c2rust-transpile/src/build_files/: Cargo.toml.hbs  generated-rust-toolchain.toml  lib.rs.hbs  mod.rs
c2rust/c2rust-transpile/src/c_ast/: conversion.rs  iterators.rs  mod.rs  print.rs
c2rust/c2rust-transpile/src/cfg/: mod.rs  relooper.rs
c2rust/c2rust-transpile/src/compile_cmds/: mod.rs
c2rust/c2rust-transpile/src/rust_ast/: item_store.rs  set_span.rs
c2rust/c2rust-transpile/src/translator/: assembly.rs  atomics.rs  builtins.rs  comments.rs  literals.rs  main_function.rs  mod.rs  named_references.rs  operators.rs  parent_fn.rs  pointers.rs  simd.rs  structs.rs  tenjin.rs  tenjin_scanf.rs  variadic.rs
c2rust/c2rust-transpile/tests/: snapshots.rs
c2rust/c2rust-transpile/tests/snapshots/: snapshots__transpile-aarch64-macos@varargs.c.snap  snapshots__transpile-aarch64@vm_x86.c.snap  snapshots__transpile-linux@rotate.c.snap  snapshots__transpile-linux@sigign.c.snap  snapshots__transpile-linux@tenjin_math.c.snap  snapshots__transpile-linux@typedefidx.c.snap  snapshots__transpile-macos@rotate.c.snap  snapshots__transpile-macos@sigign.c.snap  snapshots__transpile-macos@tenjin_math.c.snap  snapshots__transpile-macos@typedefidx.c.snap  snapshots__transpile-x86_64-linux@varargs.c.snap  snapshots__transpile-x86_64@vm_x86.c.snap  snapshots__transpile@arrays.c.snap  snapshots__transpile@compound_literals.c.snap  snapshots__transpile@exprs.c.snap  snapshots__transpile@macros.c.snap  snapshots__transpile@main_fn.c.snap  snapshots__transpile@ref_ub.c.snap  snapshots__transpile@rotate.c.snap  snapshots__transpile@tenjin_bool.c.snap  snapshots__transpile@tenjin_globals.c.snap  snapshots__transpile@tenjin_guided.c.snap  tenjin_bool.c  tenjin_globals.c  tenjin_guided.c
c2rust/c2rust-transpile/tests/snapshots/os-specific/: tenjin_math.c
c2rust/scripts/: convert_build_commands.py
c2rust/tools/split_ffi_entry_points/src/: main.rs
cli/: 10j  autoblocked_macro_names_in_translation.txt  autoincluded_tenjin_decls.h  batching_rewriter.py  c_refact.py  c_refact_arglifter.py  c_refact_decl_splitter.py  c_refact_identify_mains.py  c_refact_type_mod_replicator.py  caching_file_contents.py  cargo_workspace_helpers.py  cindex_helpers.py  cli_subcommands.py  compilation_database.py  constants.py  covset.py  e2e_smoke_tests.py  hermetic.py  ingest.py  ingest_tracking.py  intercept_exec.py  llvm_bitcode_linking.py  main.py  provisioning.py  pyproject.toml  repo_root.py  speculative_rewriters.py  static_measurements_rust.py  targets.py  targets_from_cmake.py  targets_from_intercept.py  tenj_types.py  test_fixtures.py  translation.py  translation_improvement.py  translation_preparation.py  vcs_helpers.py
cli/sh/: fetch-uv.sh  provision.sh
cli/sh/cc-ld-intercept/: cc  ld
docs/: README.md  USE.md  c2rust_notes.md  ci_timing.md  obscure_provisioning_errors.md  rationale.md
tests/: 10j_pytest_fixtures.py  conftest.py  test_clang_cindex.py  test_covset_from_llvm_cov_export.py
tests/smoke_tests/: test_smoketests.py
tests/smoke_tests/cmake_lone_exe/: CMakeLists.txt  main.c
tests/smoke_tests/single_c_file/: main.c
tests/smoke_tests/test_03/: CMakeLists.txt
tests/smoke_tests/test_1/: main.c
tests/smoke_tests/test_2/: Makefile  a.c  b.c  main.c
tests/smoke_tests/triplicated_exeonly/: Makefile  source.c
xj-improve-multitool/: Cargo.toml
xj-improve-multitool/src/: extract_graph.rs  lib.rs  span_eraser.rs
xj-prepare-findfnptrdecls/: CMakeLists.txt  FindFnPtrDecls.cpp
xj-prepare-printdecllocs/: CMakeLists.txt  PrintDeclLocs.cpp
xj-prepare-unionbitcasts/: CMakeLists.txt  Common.cpp  Common.h  FunctionAccessAnalyzer.cpp  FunctionAccessAnalyzer.h  TransformationMethods.cpp  UnionAccessCollector.cpp  UnionAccessCollector.h  UnionTransformAction.cpp  UnionTransformAction.h  ValidationMethods.cpp  main.cpp
