[project]
name = "10j"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.0"
dependencies = [
    "bencode-py==4.0.0",
    "clang==18.1.8",
    "click==8.1.8",
    "cmake-file-api==0.0.8.3",
    "dataclasses-json>=0.6.7",
    "mypy==1.15.0",
    "packaging==24.2",
    "pycparser==2.23",
    "requests>=2.32.0",
    "ruff==0.11.7",
    "types-requests>=2.32.4.20250611",
    "pytest>=9.0.0",
    "pytest-xdist>=3.8.0",
]
